tests/ui/consts/issue-64662.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-64662.rs:2:9
   |
LL |     A = foo(),
   |         ^^^ cannot infer type of the type parameter `T` declared on the function `foo`
   |
help: consider specifying a concrete type for the type parameter `T`
   |
LL |     A = foo::</* Type */>(),
   |            ++++++++++++++

error[E0282]: type annotations needed
  --> $DIR/issue-64662.rs:3:9
   |
LL |     B = foo(),
   |         ^^^ cannot infer type of the type parameter `T` declared on the function `foo`
   |
help: consider specifying a concrete type for the type parameter `T`
   |
LL |     B = foo::</* Type */>(),
   |            ++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
